# shape-the-term

./: .gitignore  LICENSE.md  dune-project  readme.md  shape-the-term.opam
examples/: dune  main.ml
lib/: dune  shape_the_term.ml  shape_the_term.mli
test/: dune  test_shape_the_term.ml
